tests_property/futhark_error_tests/generator_error.out
User Generator gen_crash failed with size=50 and seed=REDACTED with error: Runtime error: ["Error: division by zero","","Backtrace:","-> #0  ./futhark_error_tests/generator_error.fut:5:8-14",""]
